design alignment corrected

--- a/app/components/landing/Landing.module.css
+++ b/app/components/landing/Landing.module.css
@@ -2,49 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-content: center;
-  justify-content: center;
+  width: 100vw;
   height: 100vh;
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
 }
-
-.landingimage {
-  width: 100%;
-  height: auto;
+.backgroundImage{
+ width: 100vw;
+ height: 100vh;
 }
-
-.text{
-  flex-direction: column;
-  position: absolute;
-  top: 400px;
-  letter-spacing: -0.01em;
-  color: #FFFFFF;
-  display: flex;
-  text-align: left;
-  width: 297px;
-  height: 113px;
-  z-index: 1;
-  margin-top: 11rem;
-}
-
-.text p{
-  font-size: 15px; 
-  font-weight: 600;
-  line-height: 18px;
-  margin-bottom: 10px;
-  font-size: 15px;
-}
-
-.text span{
-  margin-bottom: 10px;
-  font-size: 34px;
-  font-weight: 700;
-}
-
 .overlay{
   background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
   z-index: 1;
@@ -52,27 +16,66 @@
   width: 100%;
   height: 100%;
 }
-
 .logo {
-  display: flex;
-  justify-content: left;
-  left: 2.1rem;
-  position: absolute;
-  top: 3.25rem;
   z-index: 100;
+  width: 82px;
+  height: 46px;
+  margin-top: 56px;
+  margin-right: 15rem;
 }
-
-.button {
-  position: absolute;
+.circlesContainer{
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  z-index: 1;
+  position: relative;
+  margin-top: -2rem;
+  margin-bottom: 30px;
+}
+.circles{
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+}
+.text{
+  flex-direction: column;
+  position: relative;
+  letter-spacing: -0.01em;
+  color: #FFFFFF;
+  display: flex;
+  text-align: left;
+  width: 297px;
+  height: 113px;
+  z-index: 1;
+}
+.text p{
+  font-size: 15px; 
+  font-weight: 600;
+  line-height: 18px;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+.text span{
+  margin-bottom: 10px;
+  font-size: 34px;
+  font-weight: 700;
+}
+.buttonContainer{
   display: flex;
   align-items: center;
   justify-content: center;
+  top: 50%;
+  margin-bottom: 52px;
+}
+
+.button {
   width: 312px;
   height: 69px;
-  top: 92%;
-  /* left: 50%; */
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #fff;
   padding: 12px 24px;
   border: none;
@@ -81,14 +84,6 @@
   font-weight: 600;
   font-size: 15px;
   letter-spacing: -0.01em;
-}
-
-.circlesContainer{
-  display: block;
-  position: absolute;
-  top: 55px;
-  margin-right: 100px;
-  width: 100vw;
-  height: 100vh;
-  z-index: 1;
-}
+  margin-top: 40px;
+  margin-bottom: 52px;
+}  
